--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -16,6 +16,9 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
+    - name: Navigate to API
+      run: cd api
+
     - name: Set up Go
       uses: actions/setup-go@v4
       with:
