--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -16,16 +16,13 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
-    - name: Navigate to API
-      run: cd api
-
     - name: Set up Go
       uses: actions/setup-go@v4
       with:
         go-version: '1.20'
 
     - name: Build
-      run: go build -v ./...
+      run: cd api && go build -v ./...
 
     - name: Test
-      run: go test -v ./...
+      run: cd api &&go test -v ./...
