Adding docker compose to test

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -25,4 +25,4 @@ jobs:
       run: cd api && go build -v ./...
 
     - name: Test
-      run: cd api && go test -v ./...
+      run: docker compose up db && cd api && go test -v ./...
