--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -53,15 +53,17 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v2
         with:
-          go-version: "1.20"
+          go-version: "1.19"
+      - name: Foo
+        working-directory: ./api
+        run: ls
       - name: Install Dependencies
         working-directory: ./api
         run: go get .
       - name: Build
         working-directory: ./api
         run: go build -v .
-      - name: Migrate Database
-        working-directory: ./api
+      - name: Init Database
         run: SKIP_DOCKER=true ./scripts/init_db.sh
       - name: Run Tests with Coverage
         working-directory: ./api
