--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -54,21 +54,14 @@ jobs:
         uses: actions/setup-go@v2
         with:
           go-version: "1.19"
-      - name: Foo
-        working-directory: ./api
-        run: ls
       - name: Install Dependencies
-        working-directory: ./api
-        run: go get .
+        run: go get ./api
       - name: Build
-        working-directory: ./api
-        run: go build -v .
+        run: go build -v ./api
       - name: Init Database
         run: SKIP_DOCKER=true ./scripts/init_db.sh
       - name: Run Tests with Coverage
-        working-directory: ./api
-        run: go test -race -coverprofile=coverage.txt -covermode=atomic .
+        run: go test -race -coverprofile=coverage.txt -covermode=atomic ./api
       - name: Print Coverage
-        working-directory: ./api
         run: |
           go tool cover -func=coverage.txt
