--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -55,7 +55,11 @@ jobs:
         with:
           go-version: "1.19"
       - name: Foo
+        working-directory: ./api
         run: go mod init foo
+      - name: Bar
+        working-directory: ./api
+        run: go mod tidy
       - name: Install Dependencies
         working-directory: ./api
         run: go get .
