--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -66,5 +66,6 @@ jobs:
         working-directory: ./api/tests
         run: go test -race -coverprofile=coverage.txt -covermode=atomic
       - name: Print Coverage
+        working-directory: ./api/tests
         run: |
           go tool cover -func=coverage.txt
