--- a/.github/workflows/audit.yml
+++ b/.github/workflows/audit.yml
@@ -21,4 +21,4 @@ jobs:
       - name: Run Gosec Security Scanner
         uses: securego/gosec@master
         with:
-          args: ./api/
+          args: ./api/...
