--- a/.github/workflows/audit.yml
+++ b/.github/workflows/audit.yml
@@ -14,7 +14,7 @@ jobs:
   securit_audit:
     runs-on: ubuntu-latest
     env:
-      GO111MODULE: true
+      GO111MODULE: on
     steps:
       - name: Checkout Source
         uses: actions/checkout@v3
